--- a/ui/url-display.ui
+++ b/ui/url-display.ui
@@ -91,7 +91,7 @@ background: white;</string>
         </widget>
        </item>
        <item row="1" column="7">
-        <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <layout class="QHBoxLayout" name="horizontalLayout1">
          <item>
           <widget class="QWidget" name="searchGroup" native="true">
            <property name="sizePolicy">
@@ -105,7 +105,7 @@ background: white;</string>
            </property>
            <layout class="QHBoxLayout" name="horizontalLayout">
             <item>
-             <layout class="QVBoxLayout" name="verticalLayout">
+             <layout class="QVBoxLayout" name="horizontalLayout3">
               <property name="spacing">
                <number>0</number>
               </property>
@@ -128,21 +128,6 @@ background: white;</string>
                </widget>
               </item>
               <item>
-               <widget class="QRadioButton" name="findHashButton">
-                <property name="font">
-                 <font>
-                  <pointsize>7</pointsize>
-                 </font>
-                </property>
-                <property name="text">
-                 <string>Flashmark</string>
-                </property>
-                <attribute name="buttonGroup">
-                 <string>searchRadios</string>
-                </attribute>
-               </widget>
-              </item>
-              <item>
                <widget class="QRadioButton" name="findAndButton">
                 <property name="font">
                  <font>
@@ -151,6 +136,28 @@ background: white;</string>
                 </property>
                 <property name="text">
                  <string>AND</string>
+                </property>
+                <attribute name="buttonGroup">
+                 <string>searchRadios</string>
+                </attribute>
+               </widget>
+              </item>
+             </layout>
+            </item>
+            <item>
+             <layout class="QVBoxLayout" name="horizontalLayout2">
+              <property name="spacing">
+               <number>0</number>
+              </property>
+              <item>
+               <widget class="QRadioButton" name="findHashButton">
+                <property name="font">
+                 <font>
+                  <pointsize>7</pointsize>
+                 </font>
+                </property>
+                <property name="text">
+                 <string>Flashmark</string>
                 </property>
                 <attribute name="buttonGroup">
                  <string>searchRadios</string>
