--- a/ui/url-display-webview.ui
+++ b/ui/url-display-webview.ui
@@ -19,6 +19,9 @@
    </property>
    <item>
     <widget class="QTabWidget" name="browserTabWidget">
+     <property name="layoutDirection">
+      <enum>Qt::RightToLeft</enum>
+     </property>
      <property name="currentIndex">
       <number>0</number>
      </property>
