--- a/ui/url-display.ui
+++ b/ui/url-display.ui
@@ -100,8 +100,15 @@ background: white;</string>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>43</height>
+            </size>
+           </property>
            <property name="styleSheet">
-            <string notr="true"/>
+            <string notr="true">border-color: rgb(0, 0, 0);
+background-color: rgb(170, 170, 255);</string>
            </property>
            <layout class="QHBoxLayout" name="horizontalLayout">
             <item>
