--- a/ui/connection-display.ui
+++ b/ui/connection-display.ui
@@ -88,47 +88,14 @@
        </item>
        <item>
         <layout class="QGridLayout" name="gridLayout">
-         <item row="0" column="0">
-          <widget class="QLabel" name="labelipask_A">
-           <property name="toolTip">
-            <string>Example: 720 connections per hour = one connection each 5 seconds.</string>
-           </property>
-           <property name="text">
-            <string>Connections per Server per Hour 
-random &lt;-&gt; recent URLs</string>
-           </property>
-           <property name="alignment">
-            <set>Qt::AlignCenter</set>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="1">
-          <widget class="QDoubleSpinBox" name="freqABox">
-           <property name="toolTip">
-            <string/>
-           </property>
-           <property name="locale">
-            <locale language="English" country="UnitedStates"/>
-           </property>
-           <property name="decimals">
-            <number>0</number>
-           </property>
-           <property name="minimum">
-            <double>1.000000000000000</double>
-           </property>
-           <property name="maximum">
-            <double>1000000.000000000000000</double>
-           </property>
-           <property name="singleStep">
-            <double>0.100000000000000</double>
-           </property>
-           <property name="value">
-            <double>720.000000000000000</double>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
+         <item row="0" column="3" rowspan="3">
           <widget class="QPushButton" name="restartPollButtonA">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="text">
             <string>Save</string>
            </property>
@@ -138,7 +105,7 @@ random &lt;-&gt; recent URLs</string>
            </property>
           </widget>
          </item>
-         <item row="1" column="0">
+         <item row="2" column="1">
           <widget class="QSlider" name="ratioSliderA">
            <property name="toolTip">
             <string>If you set the slider to random, you get a backup with old URLs, if you set the slider to recent, you only get new URLs with a fresh timestamp. </string>
@@ -160,6 +127,54 @@ random &lt;-&gt; recent URLs</string>
            </property>
            <property name="tickInterval">
             <number>10</number>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="0">
+          <widget class="QLabel" name="label_A_2">
+           <property name="text">
+            <string> random &lt;-&gt; recent URLs:</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="labelipask_A">
+           <property name="toolTip">
+            <string>Example: 720 connections per hour = one connection each 5 seconds.</string>
+           </property>
+           <property name="text">
+            <string>Connections per Device per Hour:</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QDoubleSpinBox" name="freqABox">
+           <property name="toolTip">
+            <string/>
+           </property>
+           <property name="locale">
+            <locale language="English" country="UnitedStates"/>
+           </property>
+           <property name="decimals">
+            <number>0</number>
+           </property>
+           <property name="minimum">
+            <double>1.000000000000000</double>
+           </property>
+           <property name="maximum">
+            <double>400.000000000000000</double>
+           </property>
+           <property name="singleStep">
+            <double>1.000000000000000</double>
+           </property>
+           <property name="value">
+            <double>35.000000000000000</double>
            </property>
           </widget>
          </item>
@@ -261,14 +276,59 @@ random &lt;-&gt; recent URLs</string>
        </item>
        <item>
         <layout class="QGridLayout" name="gridLayout_2">
+         <item row="0" column="2" rowspan="2">
+          <widget class="QPushButton" name="restartPollButtonB">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="text">
+            <string>Save</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../arado.qrc">
+             <normaloff>:/images/filesaveas.png</normaloff>:/images/filesaveas.png</iconset>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QSlider" name="ratioSliderB">
+           <property name="toolTip">
+            <string>If you set the slider to random, you get a backup with old URLs, if you set the slider to recent, you only get new URLs with a fresh timestamp.</string>
+           </property>
+           <property name="sliderPosition">
+            <number>70</number>
+           </property>
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="tickPosition">
+            <enum>QSlider::TicksBelow</enum>
+           </property>
+           <property name="tickInterval">
+            <number>10</number>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="label_B_2">
+           <property name="text">
+            <string>random &lt;-&gt; recent URLs:</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
+          </widget>
+         </item>
          <item row="0" column="0">
           <widget class="QLabel" name="labelipask_B">
            <property name="toolTip">
             <string>Example: 60 connections per hour = one connection each 60 seconds.</string>
            </property>
            <property name="text">
-            <string>Connections per Server per Hour 
-random &lt;-&gt; recent URLs</string>
+            <string>Connections per Device per Hour:</string>
            </property>
            <property name="alignment">
             <set>Qt::AlignCenter</set>
@@ -290,43 +350,13 @@ random &lt;-&gt; recent URLs</string>
             <double>1.000000000000000</double>
            </property>
            <property name="maximum">
-            <double>100000.000000000000000</double>
+            <double>400.000000000000000</double>
            </property>
            <property name="singleStep">
             <double>0.100000000000000</double>
            </property>
            <property name="value">
-            <double>60.000000000000000</double>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
-          <widget class="QPushButton" name="restartPollButtonB">
-           <property name="text">
-            <string>Save</string>
-           </property>
-           <property name="icon">
-            <iconset resource="../arado.qrc">
-             <normaloff>:/images/filesaveas.png</normaloff>:/images/filesaveas.png</iconset>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="0">
-          <widget class="QSlider" name="ratioSliderB">
-           <property name="toolTip">
-            <string>If you set the slider to random, you get a backup with old URLs, if you set the slider to recent, you only get new URLs with a fresh timestamp.</string>
-           </property>
-           <property name="sliderPosition">
-            <number>70</number>
-           </property>
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="tickPosition">
-            <enum>QSlider::TicksBelow</enum>
-           </property>
-           <property name="tickInterval">
-            <number>10</number>
+            <double>45.000000000000000</double>
            </property>
           </widget>
          </item>
@@ -444,14 +474,59 @@ random &lt;-&gt; recent URLs</string>
        </item>
        <item>
         <layout class="QGridLayout" name="gridLayout_3">
+         <item row="0" column="2" rowspan="2">
+          <widget class="QPushButton" name="restartPollButtonC">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="text">
+            <string>Save</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../arado.qrc">
+             <normaloff>:/images/filesaveas.png</normaloff>:/images/filesaveas.png</iconset>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QSlider" name="ratioSliderC">
+           <property name="toolTip">
+            <string>If you set the slider to random, you get a backup with old URLs, if you set the slider to recent, you only get new URLs with a fresh timestamp.</string>
+           </property>
+           <property name="sliderPosition">
+            <number>90</number>
+           </property>
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="tickPosition">
+            <enum>QSlider::TicksBelow</enum>
+           </property>
+           <property name="tickInterval">
+            <number>10</number>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="label_C_2">
+           <property name="text">
+            <string> random &lt;-&gt; recent URLs:</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
+          </widget>
+         </item>
          <item row="0" column="0">
           <widget class="QLabel" name="labelipask_C">
            <property name="toolTip">
             <string>Example: 40 connections per hour = one connection each 90 seconds.</string>
            </property>
            <property name="text">
-            <string>Connections per Server per Hour 
-random &lt;-&gt; recent URLs</string>
+            <string>Connections per Device per Hour:</string>
            </property>
            <property name="alignment">
             <set>Qt::AlignCenter</set>
@@ -473,43 +548,13 @@ random &lt;-&gt; recent URLs</string>
             <double>1.000000000000000</double>
            </property>
            <property name="maximum">
-            <double>1000000.000000000000000</double>
+            <double>400.000000000000000</double>
            </property>
            <property name="singleStep">
             <double>0.100000000000000</double>
            </property>
            <property name="value">
-            <double>40.000000000000000</double>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
-          <widget class="QPushButton" name="restartPollButtonC">
-           <property name="text">
-            <string>Save</string>
-           </property>
-           <property name="icon">
-            <iconset resource="../arado.qrc">
-             <normaloff>:/images/filesaveas.png</normaloff>:/images/filesaveas.png</iconset>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="0">
-          <widget class="QSlider" name="ratioSliderC">
-           <property name="toolTip">
-            <string>If you set the slider to random, you get a backup with old URLs, if you set the slider to recent, you only get new URLs with a fresh timestamp.</string>
-           </property>
-           <property name="sliderPosition">
-            <number>90</number>
-           </property>
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="tickPosition">
-            <enum>QSlider::TicksBelow</enum>
-           </property>
-           <property name="tickInterval">
-            <number>10</number>
+            <double>50.000000000000000</double>
            </property>
           </widget>
          </item>
@@ -951,6 +996,7 @@ random &lt;-&gt; recent URLs</string>
   <tabstop>listenPortBox</tabstop>
  </tabstops>
  <resources>
+  <include location="../arado.qrc"/>
   <include location="../arado.qrc"/>
  </resources>
  <connections/>
