--- a/arado.qrc
+++ b/arado.qrc
@@ -64,6 +64,7 @@
     <qresource prefix="/help">
         <file alias="LICENSE.txt">helpfiles/LICENSE.txt</file>
         <file alias="helpman.html">helpfiles/helpman.html</file>
+        <file alias="settingshelp.html">html/settings_faq.html</file>
     </qresource>
     <qresource prefix="/builtinjs">
        <file alias="Translate.js">js/Translate.js</file>
