--- a/ui/aradomain.ui
+++ b/ui/aradomain.ui
@@ -39,7 +39,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>25</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -261,6 +261,10 @@
    </property>
   </action>
   <action name="actionSettingsHelp">
+   <property name="icon">
+    <iconset resource="../arado.qrc">
+     <normaloff>:/images/help.png</normaloff>:/images/help.png</iconset>
+   </property>
    <property name="text">
     <string>Settings Help</string>
    </property>
@@ -268,6 +272,7 @@
  </widget>
  <layoutdefault spacing="2" margin="2"/>
  <resources>
+  <include location="../arado.qrc"/>
   <include location="../arado.qrc"/>
  </resources>
  <connections/>
