--- a/ui/aradomain.ui
+++ b/ui/aradomain.ui
@@ -62,8 +62,9 @@
     <property name="title">
      <string>Help</string>
     </property>
-    <addaction name="actionAbout"/>
     <addaction name="actionSettingsHelp"/>
+    <addaction name="separator"/>
+    <addaction name="actionAbout"/>
    </widget>
    <widget class="QMenu" name="menuData">
     <property name="title">
